tests/neg/i18122.check
-- Error: tests/neg/i18122.scala:10:16 ---------------------------------------------------------------------------------
10 |    foo1(y = 1, 2, x = 3) // error: positional after named
   |                ^
   |                positional after named argument
-- Error: tests/neg/i18122.scala:11:16 ---------------------------------------------------------------------------------
11 |    foo2(y = 1, 2, x = 3) // error: positional after named
   |                ^
   |                positional after named argument
-- Error: tests/neg/i18122.scala:12:16 ---------------------------------------------------------------------------------
12 |    foo1(y = 1, 2, z = 3) // error: positional after named
   |                ^
   |                positional after named argument
-- Error: tests/neg/i18122.scala:13:16 ---------------------------------------------------------------------------------
13 |    foo2(y = 1, 2, z = 3) // error: positional after named
   |                ^
   |                positional after named argument
-- Error: tests/neg/i18122.scala:14:16 ---------------------------------------------------------------------------------
14 |    foo1(y = 1, 2) // error: positional after named
   |                ^
   |                positional after named argument
-- Error: tests/neg/i18122.scala:15:16 ---------------------------------------------------------------------------------
15 |    foo2(y = 1, 2) // error: positional after named
   |                ^
   |                positional after named argument
-- [E171] Type Error: tests/neg/i18122.scala:17:8 ----------------------------------------------------------------------
17 |    bar1() // error: missing arg
   |    ^^^^^^
   |    missing argument for parameter x of method bar1 in object Test: (x: Int, ys: Int*): Unit
-- [E171] Type Error: tests/neg/i18122.scala:23:8 ----------------------------------------------------------------------
23 |    bar1(ys = 1) // error: missing arg
   |    ^^^^^^^^^^^^
   |    missing argument for parameter x of method bar1 in object Test: (x: Int, ys: Int*): Unit
-- Error: tests/neg/i18122.scala:43:22 ---------------------------------------------------------------------------------
43 |    bar1(x = 1, 2, ys = 3)  // error: parameter ys is already instantiated
   |                   ^^^^^^
   |                   parameter ys of method bar1 in object Test: (x: Int, ys: Int*): Unit is already instantiated
-- Error: tests/neg/i18122.scala:44:18 ---------------------------------------------------------------------------------
44 |    bar1(1, 2, ys = 3)      // error: parameter ys is already instantiated
   |               ^^^^^^
   |               parameter ys of method bar1 in object Test: (x: Int, ys: Int*): Unit is already instantiated
-- Error: tests/neg/i18122.scala:45:22 ---------------------------------------------------------------------------------
45 |    bar2(x = 1, 2, ys = 3)  // error: parameter ys is already instantiated
   |                   ^^^^^^
   |                   parameter ys of method bar2 in object Test: (x: Int, ys: Int*): Unit is already instantiated
-- Error: tests/neg/i18122.scala:46:17 ---------------------------------------------------------------------------------
46 |    bar1(ys = 1, 2, x = 3)  // error: positional after named
   |                 ^
   |                 positional after named argument
-- Error: tests/neg/i18122.scala:47:17 ---------------------------------------------------------------------------------
47 |    bar2(ys = 1, 2, x = 3)  // error: positional after named
   |                 ^
   |                 positional after named argument
